# KEDB_capstone

./: CRUD_Endpoints.md  README.md  setup_phase_a.sh
backend/: Dockerfile  pyproject.toml
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  entries.py  reviews.py  solutions.py  tags.py
backend/app/core/: exceptions.py
backend/app/repositories/: __init__.py  base.py  entry_repo.py  review_repo.py  solution_repo.py  tag_repo.py
backend/app/schemas/: __init__.py  common.py  entry.py  review.py  solution.py  tag.py
backend/app/services/: __init__.py  entry_service.py  indexing_service.py  review_service.py  solution_service.py  tag_service.py
backend/app/workers/: __init__.py  indexing_worker.py
backend/tests/: conftest.py  test_entries.py
deploy/: docker-compose.yml
